# python-basic-template

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: code-quality.yaml
